--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,15 @@
       color: #e2e8f0;
       padding: 1rem;
       border-radius: 0.75rem;
-      font-size: 0.85rem;
+      font-size: 0.8rem;
       white-space: pre-wrap;
       overflow-x: auto;
     }
     .badge {
       font-size: 0.7rem;
-      padding: 0.15rem 0.5rem;
+      padding: 0.2rem 0.6rem;
       border-radius: 999px;
+      font-weight: 600;
     }
   </style>
 </head>
@@ -38,7 +39,7 @@
         ECI Diagnostic Console <span class="text-xs text-gray-500">INTERNAL</span>
       </h1>
       <p class="text-sm text-gray-600 mt-1">
-        exmxc.ai · Entity Engineering → Entity Clarity Outcome
+        exmxc.ai · Entity Clarity Index — structural truth view
       </p>
     </div>
     <div class="text-xs text-gray-500 text-right">
@@ -50,122 +51,81 @@
 
 <!-- INPUT -->
 <section class="bg-white border rounded-xl p-4 mb-6 shadow-sm">
-  <label class="text-xs text-gray-600">URL to diagnose</label>
+  <label class="text-xs text-gray-600">URL to audit</label>
   <div class="flex gap-2 mt-1">
     <input id="urlInput" class="flex-1 border rounded px-3 py-2 text-sm" placeholder="example.com" />
-    <button id="runButton" class="bg-black text-white px-4 py-2 rounded">Run Diagnostic</button>
+    <button id="runButton" class="bg-black text-white px-4 py-2 rounded">Run Audit</button>
   </div>
 </section>
 
-<!-- ECI OUTCOME -->
+<!-- ECI OVERVIEW -->
 <section class="bg-indigo-50 border border-indigo-200 rounded-xl p-6 mb-8">
   <div class="flex justify-between items-start gap-6">
 
     <div>
       <div id="entityName" class="text-sm font-semibold text-gray-800"></div>
 
-      <div class="flex items-center gap-2 mt-1">
-        <div id="scoreDisplay" class="text-3xl font-bold">ECI: -- / 100</div>
-        <span id="postureBadge" class="badge bg-gray-200">Awaiting</span>
+      <div class="flex items-center gap-3 mt-1">
+        <div id="eciScore" class="text-3xl font-bold">ECI: —</div>
+        <span id="eciBadge" class="badge bg-gray-200">—</span>
       </div>
 
       <div class="w-full h-3 bg-gray-200 rounded-full mt-3">
-        <div id="scoreBar" class="h-3 rounded-full"></div>
+        <div id="eciBar" class="h-3 rounded-full"></div>
       </div>
 
-      <div class="mt-3 text-sm text-gray-700">
-        <div id="eciInterpretation" class="font-semibold"></div>
-        <div id="eciOverview" class="text-xs text-gray-600 mt-1"></div>
+      <div class="mt-3 text-sm">
+        <div><strong>Interpretation:</strong> <span id="eciInterpretation"></span></div>
+        <div><strong>Strategic Posture:</strong> <span id="eciPosture"></span></div>
       </div>
     </div>
 
-    <!-- AI ACCESS CONDITIONS -->
+    <!-- CRAWL HEALTH -->
     <div class="bg-white border rounded-lg p-3 w-64 text-xs">
       <div class="flex justify-between items-center mb-1">
-        <span class="font-semibold">AI Access Conditions</span>
-        <span id="accessBadge" class="badge bg-gray-200">—</span>
+        <span class="font-semibold">Crawl Health</span>
+        <span id="crawlHealthScore" class="badge bg-gray-200">—</span>
       </div>
-      <div id="accessCategory" class="text-xs mb-1 text-gray-600">—</div>
-      <ul id="accessNotes" class="list-disc pl-4 space-y-0.5"></ul>
+      <div id="crawlHealthCategory" class="text-xs mb-1">—</div>
+      <ul id="crawlHealthNotes" class="list-disc pl-4 space-y-0.5"></ul>
     </div>
 
   </div>
 </section>
 
-<!-- STRUCTURAL DISTRIBUTION -->
-<section class="mb-8">
-  <h2 class="text-sm font-semibold mb-1">Structural Signal Distribution <span class="text-xs text-gray-500">(internal)</span></h2>
-  <p class="text-xs text-gray-500 mb-3">
-    How entity clarity is structurally composed. Not a public score.
-  </p>
-
-  <div class="grid grid-cols-3 gap-3 text-xs">
-    <div class="bg-white border rounded p-3">
-      <strong>Tier 1 — Comprehension</strong>
-      <div id="tier1Score">--</div>
-      <div class="h-2 bg-gray-200 rounded">
-        <div id="tier1Bar" class="h-2 rounded"></div>
-      </div>
-      <div id="tier1Meta" class="text-[11px] text-gray-500 mt-1"></div>
-    </div>
-    <div class="bg-white border rounded p-3">
-      <strong>Tier 2 — Structure</strong>
-      <div id="tier2Score">--</div>
-      <div class="h-2 bg-gray-200 rounded">
-        <div id="tier2Bar" class="h-2 rounded"></div>
-      </div>
-      <div id="tier2Meta" class="text-[11px] text-gray-500 mt-1"></div>
-    </div>
-    <div class="bg-white border rounded p-3">
-      <strong>Tier 3 — Surface</strong>
-      <div id="tier3Score">--</div>
-      <div class="h-2 bg-gray-200 rounded">
-        <div id="tier3Bar" class="h-2 rounded"></div>
-      </div>
-      <div id="tier3Meta" class="text-[11px] text-gray-500 mt-1"></div>
-    </div>
-  </div>
-</section>
-
-<!-- 13 SIGNAL BREAKDOWN -->
+<!-- 13 SIGNALS (SINGLE SOURCE OF TRUTH) -->
 <section class="mb-10">
-  <h2 class="text-sm font-semibold mb-4">13 Clarity Signals (Diagnostic)</h2>
+  <h2 class="text-sm font-semibold mb-4">Entity Clarity Signals (13)</h2>
 
-  <div class="grid grid-cols-1 md:grid-cols-2 gap-6 text-sm">
-
-    <div class="bg-white border rounded-xl p-4">
-      <h3 class="font-semibold mb-2">Meta & Identity</h3>
-      <div id="metaSignals" class="space-y-4"></div>
-    </div>
-
-    <div class="bg-white border rounded-xl p-4">
-      <h3 class="font-semibold mb-2">Schema & Structure</h3>
-      <div id="schemaSignals" class="space-y-4"></div>
-    </div>
-
-    <div class="bg-white border rounded-xl p-4">
-      <h3 class="font-semibold mb-2">Lattice & Authority</h3>
-      <div id="latticeSignals" class="space-y-4"></div>
-    </div>
-
-    <div class="bg-white border rounded-xl p-4">
-      <h3 class="font-semibold mb-2">Content & Inference</h3>
-      <div id="contentSignals" class="space-y-4"></div>
-    </div>
-
+  <div class="bg-white border rounded-xl p-4">
+    <div id="signalList" class="grid grid-cols-1 md:grid-cols-2 gap-4 text-sm"></div>
   </div>
 </section>
 
 <!-- RAW JSON -->
 <section>
-  <h2 class="text-sm font-semibold mb-2">Canonical Audit Output <span class="text-xs text-gray-500">(internal truth)</span></h2>
+  <h2 class="text-sm font-semibold mb-2">Raw JSON (Diagnostic)</h2>
   <pre id="result" class="json-box">// Awaiting input…</pre>
 </section>
 
 <script>
-/* ----------------------------
-   HELPERS
------------------------------ */
+const runButton = document.getElementById("runButton");
+const resultEl = document.getElementById("result");
+const timestampEl = document.getElementById("timestamp");
+
+const entityNameEl = document.getElementById("entityName");
+const eciScoreEl = document.getElementById("eciScore");
+const eciBarEl = document.getElementById("eciBar");
+const eciBadgeEl = document.getElementById("eciBadge");
+const eciInterpretationEl = document.getElementById("eciInterpretation");
+const eciPostureEl = document.getElementById("eciPosture");
+
+const crawlHealthScoreEl = document.getElementById("crawlHealthScore");
+const crawlHealthCategoryEl = document.getElementById("crawlHealthCategory");
+const crawlHealthNotesEl = document.getElementById("crawlHealthNotes");
+
+const signalListEl = document.getElementById("signalList");
+
 function color(score) {
   if (score >= 80) return "bg-green-500";
   if (score >= 60) return "bg-yellow-400";
@@ -173,143 +133,75 @@ function color(score) {
   return "bg-red-500";
 }
 
-/* ----------------------------
-   GROUPINGS
------------------------------ */
-const GROUPS = {
-  meta: ["Title Precision","Meta Description Integrity","Canonical Clarity","Brand & Technical Consistency"],
-  schema: ["Schema Presence & Validity","Organization Schema","Breadcrumb Schema","Author/Person Schema"],
-  lattice: ["Internal Lattice Integrity","External Authority Signal","Social Entity Links","AI Crawl Fidelity"],
-  content: ["Inference Efficiency"]
-};
-
-const TIER_MAP = {
-  tier1: ["Inference Efficiency","Internal Lattice Integrity","External Authority Signal","Social Entity Links","AI Crawl Fidelity"],
-  tier2: ["Schema Presence & Validity","Organization Schema","Breadcrumb Schema","Author/Person Schema"],
-  tier3: ["Title Precision","Meta Description Integrity","Canonical Clarity","Brand & Technical Consistency"]
-};
-
-/* ----------------------------
-   DOM
------------------------------ */
-const runButton = document.getElementById("runButton");
-const resultEl = document.getElementById("result");
-const timestampEl = document.getElementById("timestamp");
-
-const scoreDisplay = document.getElementById("scoreDisplay");
-const scoreBar = document.getElementById("scoreBar");
-const postureBadge = document.getElementById("postureBadge");
-
-const entityNameEl = document.getElementById("entityName");
-const eciInterpretationEl = document.getElementById("eciInterpretation");
-const eciOverviewEl = document.getElementById("eciOverview");
-
-const accessBadgeEl = document.getElementById("accessBadge");
-const accessCategoryEl = document.getElementById("accessCategory");
-const accessNotesEl = document.getElementById("accessNotes");
-
-const tier1ScoreEl = document.getElementById("tier1Score");
-const tier2ScoreEl = document.getElementById("tier2Score");
-const tier3ScoreEl = document.getElementById("tier3Score");
-const tier1BarEl = document.getElementById("tier1Bar");
-const tier2BarEl = document.getElementById("tier2Bar");
-const tier3BarEl = document.getElementById("tier3Bar");
-const tier1MetaEl = document.getElementById("tier1Meta");
-const tier2MetaEl = document.getElementById("tier2Meta");
-const tier3MetaEl = document.getElementById("tier3Meta");
-
-const metaSignalsEl = document.getElementById("metaSignals");
-const schemaSignalsEl = document.getElementById("schemaSignals");
-const latticeSignalsEl = document.getElementById("latticeSignals");
-const contentSignalsEl = document.getElementById("contentSignals");
-
-/* ----------------------------
-   RENDERERS
------------------------------ */
 function renderSignal(signal) {
-  const pct = signal.max ? Math.round((signal.points / signal.max) * 100) : 0;
   const div = document.createElement("div");
+  div.className = "border rounded p-3";
   div.innerHTML = `
-    <div class="flex justify-between text-xs mb-1">
-      <span class="font-medium">${signal.key}</span>
-      <span>${signal.points}/${signal.max}</span>
+    <div class="flex justify-between items-center">
+      <span class="font-medium">${signal.name}</span>
+      <span class="badge ${
+        signal.status === "Strong" ? "bg-green-100 text-green-800" :
+        signal.status === "Moderate" ? "bg-yellow-100 text-yellow-800" :
+        "bg-gray-200 text-gray-700"
+      }">${signal.status}</span>
     </div>
-    <div class="h-2 bg-gray-200 rounded">
-      <div class="h-2 rounded ${color(pct)}" style="width:${pct}%"></div>
-    </div>
-    <div class="text-[11px] text-gray-500">${signal.notes || ""}</div>
   `;
   return div;
 }
 
-function computeTier(breakdown, keys) {
-  let raw = 0, max = 0;
-  breakdown.forEach(sig => {
-    if (keys.includes(sig.key)) {
-      raw += sig.points || 0;
-      max += sig.max || 0;
-    }
-  });
-  const pct = max ? Math.round((raw / max) * 100) : 0;
-  return { raw, max, pct };
-}
-
-function setTier(elScore, elBar, elMeta, tier) {
-  elScore.textContent = `${tier.pct}/100`;
-  elBar.style.width = `${tier.pct}%`;
-  elBar.className = `h-2 rounded ${color(tier.pct)}`;
-  elMeta.textContent = `Raw ${tier.raw} / ${tier.max}`;
-}
-
-/* ----------------------------
-   RUN
------------------------------ */
 runButton.onclick = async () => {
   const input = document.getElementById("urlInput").value.trim();
   if (!input) return;
 
+  resultEl.textContent = "Loading…";
+  signalListEl.innerHTML = "";
+
   const url = input.startsWith("http") ? input : `https://${input}`;
-  resultEl.textContent = "Loading...";
 
-  const res = await fetch(
-    `https://exmxc-audit.vercel.app/api/audit?url=${encodeURIComponent(url)}`,
-    { headers: { "x-exmxc-key": "exmxc-internal" } }
-  );
+  try {
+    const res = await fetch(
+      `/api/audit?url=${encodeURIComponent(url)}`,
+      { headers: { "x-exmxc-key": "exmxc-internal" } }
+    );
 
-  const data = await res.json();
-  resultEl.textContent = JSON.stringify(data, null, 2);
-  timestampEl.textContent = `Last run: ${new Date().toLocaleString()}`;
+    const data = await res.json();
+    resultEl.textContent = JSON.stringify(data, null, 2);
+    timestampEl.textContent = `Last run: ${new Date().toLocaleString()}`;
 
-  if (!data.success) return;
+    if (!data.success) return;
 
-  /* ECI */
-  const eci = data.eci;
-  scoreDisplay.textContent = `ECI: ${eci.eci.score} / 100`;
-  scoreBar.style.width = `${eci.eci.score}%`;
-  scoreBar.className = `h-3 rounded-full ${color(eci.eci.score)}`;
+    const eci = data.eci;
 
-  postureBadge.textContent = eci.eci.strategicPosture;
-  entityNameEl.textContent = `Entity: ${eci.entity.name}`;
-  eciInterpretationEl.textContent = eci.eci.interpretation;
-  eciOverviewEl.textContent = eci.claritySummary.overview;
+    entityNameEl.textContent = `Entity: ${eci.entity.name}`;
+    eciScoreEl.textContent = `ECI: ${eci.eci.score} / 100`;
+    eciBarEl.style.width = `${eci.eci.score}%`;
+    eciBarEl.className = `h-3 rounded-full ${color(eci.eci.score)}`;
 
-  /* Signals */
-  const breakdown = data.eei.breakdown;
-  breakdown.forEach(sig => {
-    if (GROUPS.meta.includes(sig.key)) metaSignalsEl.appendChild(renderSignal(sig));
-    if (GROUPS.schema.includes(sig.key)) schemaSignalsEl.appendChild(renderSignal(sig));
-    if (GROUPS.lattice.includes(sig.key)) latticeSignalsEl.appendChild(renderSignal(sig));
-    if (GROUPS.content.includes(sig.key)) contentSignalsEl.appendChild(renderSignal(sig));
-  });
+    eciBadgeEl.textContent = eci.eci.range;
+    eciBadgeEl.className = "badge bg-indigo-100 text-indigo-800";
 
-  /* Tiers */
-  setTier(tier1ScoreEl, tier1BarEl, tier1MetaEl, computeTier(breakdown, TIER_MAP.tier1));
-  setTier(tier2ScoreEl, tier2BarEl, tier2MetaEl, computeTier(breakdown, TIER_MAP.tier2));
-  setTier(tier3ScoreEl, tier3BarEl, tier3MetaEl, computeTier(breakdown, TIER_MAP.tier3));
+    eciInterpretationEl.textContent = eci.eci.interpretation;
+    eciPostureEl.textContent = eci.eci.strategicPosture;
 
-  /* AI Access Conditions */
-  accessBadgeEl.textContent = eci.claritySummary.defensiveness;
-  accessCategoryEl.textContent = "Observed crawl posture";
+    // Signals
+    eci.claritySignals.forEach(sig => {
+      signalListEl.appendChild(renderSignal(sig));
+    });
+
+    // Crawl Health (diagnostic only)
+    const ch = data.eei?.crawlHealth || {};
+    crawlHealthScoreEl.textContent = ch.score ? `${ch.score}/100` : "—";
+    crawlHealthCategoryEl.textContent = ch.category || "—";
+    crawlHealthNotesEl.innerHTML = "";
+    (ch.notes || []).forEach(n => {
+      const li = document.createElement("li");
+      li.textContent = n;
+      crawlHealthNotesEl.appendChild(li);
+    });
+
+  } catch (err) {
+    resultEl.textContent = JSON.stringify({ success: false, error: err.message }, null, 2);
+  }
 };
 </script>
 
