--- a/public/index.html
+++ b/public/index.html
@@ -183,10 +183,18 @@ runButton.onclick = async () => {
     eciInterpretationEl.textContent = eci.eci.interpretation;
     eciPostureEl.textContent = eci.eci.strategicPosture;
 
-    // Signals
-    eci.claritySignals.forEach(sig => {
-      signalListEl.appendChild(renderSignal(sig));
-    });
+    // Signals (defensive)
+if (Array.isArray(eci.claritySignals)) {
+  eci.claritySignals.forEach(sig => {
+    signalListEl.appendChild(renderSignal(sig));
+  });
+} else {
+  const div = document.createElement("div");
+  div.className = "text-xs text-gray-500";
+  div.textContent = "Clarity signals unavailable for this crawl.";
+  signalListEl.appendChild(div);
+}
+
 
     // Crawl Health (diagnostic only)
     const ch = data.eei?.crawlHealth || {};
